[gd_scene load_steps=7 format=3 uid="uid://qxrlmkdns66e"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_sqmis"]
[ext_resource type="PackedScene" uid="uid://ctjg7yuu7e2ql" path="res://prefabs/CPUTeam.tscn" id="2_me2iv"]
[ext_resource type="PackedScene" uid="uid://b2et8rtkxtdo6" path="res://prefabs/PlayerTeam.tscn" id="2_qoetb"]
[ext_resource type="PackedScene" uid="uid://shsmwna0cia5" path="res://prefabs/QuarterEnd.tscn" id="3_g1bwu"]
[ext_resource type="PackedScene" uid="uid://c5jusiagrv0vw" path="res://prefabs/MatchupContainer.tscn" id="4_vns61"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pvlkv"]
color = Color(1, 1, 1, 1)
thickness = 5
vertical = true

[node name="Main" type="Node2D"]
script = ExtResource("1_sqmis")
matchup_container_scene = ExtResource("4_vns61")
quarter_end_modal_scene = ExtResource("3_g1bwu")

[node name="CPUTeam" parent="." node_paths=PackedStringArray("starting_lineup_wrapper") instance=ExtResource("2_me2iv")]
starting_lineup_wrapper = NodePath("../CanvasLayer/MarginContainer/VBoxContainer")

[node name="PlayerTeam" parent="." node_paths=PackedStringArray("starting_lineup_wrapper") instance=ExtResource("2_qoetb")]
starting_lineup_wrapper = NodePath("../CanvasLayer/MarginContainer/VBoxContainer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scoreboard" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayerRebounds" type="Label" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "R: 0"

[node name="PlayerAssists" type="Label" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "A: 0"

[node name="PlayerScore" type="Label" parent="CanvasLayer/Scoreboard"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_pvlkv")

[node name="CPUScore" type="Label" parent="CanvasLayer/Scoreboard"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="CPUAssists" type="Label" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "A: 0"

[node name="CPURebounds" type="Label" parent="CanvasLayer/Scoreboard"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "R: 0"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
